# hass-gkeep-sync

./: CHANGELOG.md  LICENSE.md  README.md  hacs.json  pyproject.toml
.github/workflows/: release.yml  tests.yml
custom_components/gkeep/: __init__.py  manifest.json  services.yaml
custom_components/gkeep_sync/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  todo.py
custom_components/gkeep_sync/translations/: en.json
